refactor: model the files inside a backup instead of passing driver rows around
RESTORE FILELISTONLY rows travelled as the raw Map<String, Object> the driver produced. Column names were spelled
out as string literals at every use site, the plugin stored its own "RestoreAs" back into the server's row, and
the dialog reached into the same maps by index - so the compiler could not help with any of it.

RestoreFile holds the three columns that are actually used plus the target path, and knows what a log file is.
That removes RestoreTemp, whose two setters were only usable in the future chain because lombok.config turns on
chained accessors: `thenApply(temp::setFiles)` type-checked as a Function purely by that side effect, which is a
lot of surprise for one line. The chain reads as one step per file now, via restoreOne().

Two things fixed on the way, both consequences of the shape rather than deliberate behaviour:

- the progress consumer was registered inside the per-file loop and removed once, leaking a registration for
  every file after the first;
- uniqueName took the database name as a parameter while also having it as a field.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01QPhMuFtwcuEaWBcLeF4CNC